# mailgen

./: .gitignore  LICENSE  README.md  config.json  email.html  email.js  email.xml  exporter.js  fb.js  fbsetup.js  mailgen.cabal  mailgen.js  package-lock.json  package.json  stack.yaml
docs/: email.html
examples/: test.xml
resources/: email.xsd  style.css  template.html
resources/components/: event.html  image.html  sign.html
resources/templates/: digest.html  email.xml  email.xsd  emailMalformed.xml  style.css  template.html
resources/templates/components/: event.html  heading.html  image.html  sponsor.html  text.html
src/: Main.hs  Templates.hs  email.js  exporter.js  sponsors.js
