name:                mailgen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nvgrw/mailgen#readme
license:             BSD3
license-file:        LICENSE
author:              Nik Vangerow
maintainer:          n@vangerow.uk
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mailgen
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , heterocephalus
                     , blaze-html
                     , blaze-markup
                     , containers
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010
  other-modules:       Templates

test-suite mailgen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mailgen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nvgrw/mailgen
